--- a/Week 2/sample_quiz_question.html
+++ b/Week 2/sample_quiz_question.html
@@ -1,43 +1,55 @@
+
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
+    <style>
+ body { background-image : url("http://www.sitfawards.com/wbn/slot/u2575/Sitf%20Awards%20Final%20Judges%20Photo/DHS.png")
+ ;
+ background-color: dodgerblue;
+ background-position-x: 800px;
+ background-position-y: 40px;
+ background-size: 20%;
+ background-repeat: no-repeat;
+ }   
+ body {
+  
+  font-family: "Roboto thin";
+   font-size: 40px;} 
+    h1 { position: relative;
+    top : 10%;
+    left : 5%;}
+    button { font-size: 30px;}
+    
+     #nextqn {position: absolute;
+     bottom : 18%;
+     left : 5%;}
+     p1, p2, p3, p4, p5, p6, button {position: relative;
+     left : 5%}
+     p2 { color: yellow}
+  h1{font-family: "Roboto thin"}
+    
+    </style>
 <title>
-
 Page Template
-
 </title>
-
 </head>
-
 <body>
-
-<h1> DHS quiz 
-
-</h1>
-
-<p1> sample_question </p1
-
-<p2> a) </p2
-
+<h1> DHS Quiz </h1>
+<p1> Qn No.</p1> 
+<p2> sample_question </p2>
+<div></div>
+<br>
+<p3> a) </p3>
 <button> Option a </button>
-
-<p3> b) </p3> 
-
+<div></div>
+<p4> b) </p4> 
 <button> Option b </button>
-
-<p4> c) </p4>
-
+<div></div>
+<p5> c) </p5>
 <button> Option c </button>
-
-<p5>  d) </p5>
-
+<div></div>
+<p6>  d) </p6>
 <button> Option d </button>
-
-
-
+<button id = "nextqn"> Next Question </button>
 </body>
-
 </html>
